Fix dark mode container color

--- a/apps/browser/src/autofill/shared/styles/variables-export.css
+++ b/apps/browser/src/autofill/shared/styles/variables-export.css
@@ -19,7 +19,7 @@
   --autofill-text-color-dark: #ffffff;
   --autofill-muted-text-color-dark: #bac0ce;
   --autofill-background-color-dark: #2f343d;
-  --autofill-background-offset-color-dark: #29252e;
+  --autofill-background-offset-color-dark: #2a2f37;
   --autofill-body-color-dark: #4d525e;
   --autofill-border-color-dark: #4c525f;
   --autofill-brand-primary-dark: #6f9df1;
